<?xml version="1.0" encoding="utf-8"?>

<resources>
    <string name="app_name">DMS</string>
    <string name="title_home">Home</string>
    <string name="print_report">Print Report</string>
    <string name="pdf_lagend">This option is used to geerate PDF for selected year and month</string>
    <string name="print">Print</string>
    <string name="dua_usman">Dua for Usman bhat</string>
    <string name="nodatafound">No Data Found for this Month of Year</string>
    <string name="unknownerror">Unknown Error occurred</string>
    <string name="error500">500!Error Occurred</string>
    <string name="insertedsuccessfully">Data Inserted Successfully"</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="amount">Amount</string>



    <!--    Login -->
    <string name="login">Login</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>


    <!--    Home -->
    <string name="creditchart">Credit Chart</string>
    <string name="debitchart">Debit Chart</string>
    <string name="add_credit">Add Credit</string>

<!--    credit f-->
    <string name="given_by_honer">Given By honer</string>
    <string name="credit_for">for</string>
    <string name="recp_footer_txt">Mohtamin Madrasa Misbah Ul Uloom Batagund</string>
    <string name="cred_footer_it">Digital Signature by ITCELL Misbah-Ul-Uloom</string>
    <string name="share">Share</string>

    <string name="given_by">Given BY</string>
    <string name="receipt_no">Receipt No.</string>
    <string name="receipt_by">Receipt By</string>

    <string name="title_dashboard">Credit</string>
    <string name="credit_details"> Credit Details </string>
    <string name="creditchartdesc">Amount Credit on each Month </string>
    <string-array name="credit_mode">
        <item>Cash</item>
        <item>Online</item>
        <item>Mali</item>
    </string-array>

    <string-array name="credit_for">
        <item>Food</item>
        <item>construction</item>
        <item>Bills</item>
        <item>Pay</item>
        <item>Others</item>
    </string-array>
    <string-array name="credit_for_chart">
        <item>Food</item>
        <item>construction</item>
        <item>Bills</item>
        <item>Pay</item>
        <item>Others</item>
    </string-array>
    <string name="food">Food</string>
    <string name="construction">Construction</string>
    <string name="bills">Bills</string>
    <string name="pay">Pay</string>
    <string name="others">Others</string>




    <!--    debit f-->
    <string name="title_notifications">Debit</string>
    <string name="add_debit">Add debit</string>
    <string name="debitAlert">Debit  Alert</string>
    <string name="debit_details"> Debit Details </string>
    <string name="debitchartdesc">Amount Debited on each Month </string>
    <string name="debited_by">Debited BY</string>

<!--    PDF-->
    <string name="date">Date</string>
    <string name="pdf_header">Report of amount debited for expenses for month</string>
    <string name="pdf_footer">This report is generated Digitally and is not valid with out the signature and seal of mohtamim of the madrasa.</string>
    <string name="debited_for">Debited For</string>

    <string-array name="months">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>

    <string-array name="years">
        <item>2023</item>
        <item>2024</item>
        <item>2022</item>
    </string-array>
</resources>