<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/reciept_layout"
    android:layout_width="match_parent"
    android:layout_margin="3dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="20dp"
        app:cardElevation="20dp">
        <LinearLayout
            android:background="#EAE29C"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_marginLeft="20dp"
                    android:src="@drawable/mlogo"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="65dp"
                    android:textColor="#44546A"
                    android:textStyle="bold"
                    android:layout_gravity="center"
                    android:textSize="20dp"
                    android:gravity="center"
                    android:fontFamily="@font/ur"
                    android:text="مدرسہ مصباح العلوم بٹہ گنڈ\n ویریناگ اسلام آباد "
                    android:layout_margin="5dp"/>
            </LinearLayout>
            <TextView
                android:id="@+id/amount_by"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/custom_border"
                android:textStyle="bold"
                android:textSize="20dp"
                android:gravity="center"
                android:text="@string/given_by_honer"
                android:layout_margin="8dp"/>
            <TextView
                android:id="@+id/amount_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:textStyle="bold"
                android:textSize="10dp"
                android:gravity="center"
                android:text="Date 10-03-2022 "/>
        </LinearLayout>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal">
            <TextView
                android:id="@+id/total_amount"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_weight="0.5"
                android:background="@drawable/custom_border"
                android:textStyle="bold"
                android:textSize="20sp"
                android:gravity="center"
                android:text="@string/amount"
                android:layout_margin="8dp"/>
            <TextView
                android:id="@+id/amount_for"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:background="@drawable/custom_border"
                android:layout_weight="0.5"
                android:text="@string/credit_for"
                android:textStyle="bold"
                android:textSize="20sp"
                android:gravity="center"
                android:layout_margin="8dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal">
            <TextView
                android:id="@+id/amount_rec"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:background="@drawable/custom_border"
                android:layout_weight="0.5"
                android:textStyle="bold"
                android:textSize="20sp"
                android:gravity="center"
                android:text="@string/receipt_no"
                android:layout_margin="8dp"/>
            <TextView
                android:id="@+id/amount_rec_by"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:background="@drawable/custom_border"
                android:layout_weight="0.5"
                android:text="@string/receipt_by"
                android:textStyle="bold"
                android:textSize="20dp"
                android:gravity="center"
                android:layout_margin="8dp"/>
        </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="12dp"
                    android:textColor="@color/colorPrimaryDark"
                    android:gravity="center"
                    android:text="@string/recp_footer_txt"
                    android:layout_margin="2dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="6dp"
                    android:gravity="center"
                    android:text="@string/cred_footer_it"
                    android:layout_margin="2dp"/>
            </LinearLayout>

    <LinearLayout
        android:id="@+id/btn_layout_to_hide"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal">
            <Button
                android:id="@+id/print_rec"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:background="@drawable/custom_border"
                android:layout_weight="0.2"
                android:textStyle="bold"
                android:textSize="15sp"
                android:gravity="center"
                android:drawableLeft="@drawable/ic_print"
                android:text="@string/print"
                android:layout_margin="8dp"/>
            <Button
                android:id="@+id/share_rec"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:background="@drawable/custom_border"
                android:layout_weight="0.5"
                android:text="@string/share"
                android:textStyle="bold"
                android:textSize="15sp"
                android:gravity="center"
                android:layout_margin="8dp" />
        </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>